imgdatadir = $(datadir)/bombz-gtk
imgdata_DATA = \
	logo.png \
	logo_test.png \
	clicking.png \
	normal.png \
	dead.png \
	win.png \
	bombface6.xpm \
	flag.xpm \
	1.xpm \
	2.xpm \
	3.xpm \
	4.xpm \
	5.xpm \
	6.xpm \
	7.xpm \
	8.xpm \
	n0.xpm \
	n1.xpm \
	n2.xpm \
	n3.xpm \
	n4.xpm \
	n5.xpm \
	n6.xpm \
	n7.xpm \
	n8.xpm \
	n9.xpm \
	nco.xpm
